Revision history for {{$dist->name}}

{{$NEXT}}
            * Add .github dir.
            * Add files CONTRIBUTING.md, CODE_OF_CONDUCT.md and SECURITY.md.
            * Clean dist.ini.
            * Remove fatpacker instruction from README.
            * Add new LICENSE files and change README.md.
            * Use @Filter to use PluginBundle::MIKKOI.
            * Readjust Changes file.
            * Bump version.
            * Add BumpVersionAfterRelease and Git::Commit to dist.ini.
            * Add $VERSION to library and executable files.

0.010     2024-01-02 20:32:48+01:00 Europe/Stockholm
            * Fix errors in SYNOPSIS. (Ron Savage <ron@savage.net.au>)

0.009     2023-11-15 19:35:06+01:00 Europe/Stockholm
            * Add App::FatPacker to deps.
            * Add contributor gregor herrmann <gregoa@debian.org>
            * Add Repology link to README.md.
            * Available as a Debian package. (gregor herrmann <gregoa@debian.org>)

0.008     2023-08-13 13:25:41+02:00 Europe/Berlin
            * Fix dist.ini Run::AfterRelease action.
            * Create CLI option --exact

0.007     2023-04-23 22:45:02+02:00 Europe/Stockholm
            * Replace say with print
            * Add envassert.self-contained to MANIFEST.SKIP.

0.006     2023-02-27 22:15:15+01:00 Europe/Stockholm
            * Clean up documentation.
            * Clean up dist.ini a little.
            * Use option auto_help in executable.
            * Use option auto_version in executable.
            * Move fatpacked executable to root.
            * Update dist.ini with ExecDir to `script`.
            * Update envassert.self-contained url.

0.005     2023-02-25 19:28:40+01:00 Europe/Stockholm
            * Fix typos (Ivan Bessarabov <ivan@bessarabov.ru>)
            * Update README.md

0.004     2023-02-19 15:47:10+01:00 Europe/Stockholm
            * Move fatpacked executable to root.
            * Update dist.ini with ExecDir to `script`.
