@@ -222,4 +222,11 @@ include F<envassert> in a docker container build.
 
 No external dependencies outside Perl's standard distribution.
 
+=head1 SEE ALSO
+
+L<Env::Dot> is a "sister" to Env::Assert.
+Read environment variables from a F<.env> file directly into you program.
+There is also script F<envdot> which can turn F<.env> file's content
+into environment variables for different shells.
+
 =cut
